<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main"
    android:gravity="center_vertical"
    tools:context=".ui.view.RegisterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/register"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:fontFamily="@font/league_spartan_bold"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_new_friends"
        android:gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textColor="@color/purple_500"
        android:fontFamily="@font/league_spartan_bold"/>



    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edit_text_bg"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edit_text_bg"/>

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:padding="12dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edit_text_bg"/>



    <EditText
        android:id="@+id/re_password"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:padding="12dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edit_text_bg"/>


    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        android:gravity="start"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textColor="@color/hint" />


    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/button_bg"
        android:text="@string/sign_up" />


</LinearLayout>